<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/prod_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/goto_production"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="380dp"
        app:layout_constraintBottom_toBottomOf="@+id/goto_button"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/checkbox_locations_loaded"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/unchecked"
        android:foreground="@drawable/unchecked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/checkbox_backup"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="720dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/unchecked"
        android:foreground="@drawable/unchecked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/checkbox_localize"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="844dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/unchecked"
        android:foreground="@drawable/unchecked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/checkbox_localize_and_map"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="844dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/unchecked"
        android:foreground="@drawable/unchecked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar_localize_and_map"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginStart="848dp"
        android:layout_marginTop="120dp"
        android:indeterminateDrawable="@drawable/spinner"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let's map the World"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="380dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startlocalizeandmap_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="116dp"
        android:text="@string/start_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stoplocalizeandmap_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="116dp"
        android:text="@string/stop_map"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/startlocalizerobot_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="260dp"
        android:text="@string/start_localize_robot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stoplocalizerobot_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="260dp"
        android:text="@string/stop_localize_robot"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/load_locations_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="456dp"
        android:text="@string/load_locations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_locations_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="456dp"
        android:text="@string/save_locations"
        app:layout_constraintStart_toEndOf="@+id/load_locations_button"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="text"
        android:labelFor="@+id/editText"
        app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintLeft_toRightOf="@+id/save_button"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Location" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="348dp"
        android:layout_height="206dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="116dp"
        android:indeterminateDrawable="@drawable/spinner"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>